# simplechat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
client/: socket_helper.js
lib/: Cargo.toml
lib/src/: command.rs  lib.rs  sync.rs  user.rs
server/: Cargo.toml
server/src/: commands.rs  main.rs
